# zowie-agent-sdk-python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: ci.yml
scripts/: setup.py
src/zowie_agent_sdk/: __init__.py  agent.py  auth.py  context.py  core.py  domain.py  http.py  protocol.py  types.py
src/zowie_agent_sdk/llm/: base.py  google.py  openai.py
tests/: __init__.py  conftest.py  fake_providers.py  test_agent.py  test_auth.py  test_concurrent.py  test_context.py  test_e2e_real_apis.py  test_error_handling.py  test_http_client.py  test_http_integration.py  test_integration.py  test_llm_integration.py  test_logging.py  test_simple_integration.py  test_structured_output.py  utils.py
tests/test_llm/: __init__.py  test_base.py  test_error_cases.py
